# medgemma-hackathon

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
components/api-service/: README.md  mkdocs.yml  pyproject.toml
components/api-service/docs/api/: index.md
components/api-service/scripts/: export_openapi.py
components/api-service/src/api_service/: dependencies.py  ingestion.py  main.py  storage.py
components/api-service/tests/: conftest.py  constants.py  test_api_e2e.py  test_api_endpoints.py  test_hitl_feedback.py  test_ingestion_pipeline.py  test_placeholder.py  test_protocol_endpoints.py  test_storage.py
components/data-pipeline/: README.md  mkdocs.yml  pyproject.toml
components/data-pipeline/docs/api/: index.md
components/data-pipeline/src/data_pipeline/: __init__.py  download_protocols.py  downloader.py  loader.py
components/data-pipeline/tests/: conftest.py  test_data_pipeline_placeholder.py  test_loader.py
components/evaluation/: README.md  mkdocs.yml  pyproject.toml
components/evaluation/docs/api/: index.md
components/evaluation/src/evaluation/: export.py  metrics.py
components/evaluation/tests/: conftest.py  test_evaluation_placeholder.py  test_export.py  test_metrics.py
components/extraction-service/: Makefile  README.md  mkdocs.yml  pyproject.toml
components/extraction-service/docs/api/: index.md
components/extraction-service/src/extraction_service/: chunking.py  pdf_chunker.py  pdf_extractor.py  pipeline.py  react_graph.py  schemas.py  semantic_cache.py  state.py  tools.py
components/extraction-service/src/extraction_service/prompts/: clarify_ambiguity.j2  extract_criteria.j2  extract_criteria_direct.j2  extract_from_pdf.j2  extract_triplet.j2  extraction_system.j2  extraction_system_iterative.j2  extraction_system_orchestrator.j2  extraction_system_react.j2  extraction_user.j2  extraction_user_chunked.j2  extraction_user_orchestrator.j2  filter_pages.j2  filter_paragraphs.j2  system.j2
components/extraction-service/tests/: conftest.py  test_chunking.py  test_extraction_placeholder.py  test_pipeline.py
components/grounding-service/: README.md  mkdocs.yml  pyproject.toml
components/grounding-service/docs/api/: index.md
components/grounding-service/src/grounding_service/: __init__.py  agent.py  computed_fields.py  mcp_server.py  schemas.py  semantic_cache.py  tools.py  ubkg_client.py  umls_client.py
components/grounding-service/src/grounding_service/prompts/: extract_terms_system.j2  extract_terms_user.j2  grounding_system.j2  grounding_user.j2  interpret_medical_text.j2  select_grounding_system.j2  select_grounding_user.j2
components/grounding-service/tests/: conftest.py  test_agent.py  test_agent_convergence.py  test_field_mapping.py  test_grounding_placeholder.py  test_semantic_cache.py  test_tools.py  test_ubkg_client.py  test_umls_client.py  test_umls_integration.py
components/hitl-ui/: README.md  eslint.config.js  index.html  mkdocs.yml  vite.config.ts
components/hitl-ui/docs/: index.md
components/hitl-ui/src/: App.tsx  index.css  vite-env.d.ts  wireframes.tsx
components/hitl-ui/src/components/: TaskPanel.tsx
components/hitl-ui/src/design-system/: README.md  index.ts  theme.ts  tokens.ts  (+1 more)
components/inference/: README.md  pyproject.toml  verify_garden.py  verify_sdk.py  verify_structured.py
components/inference/tests/: test_config.py  test_factories.py  test_inference_tools.py  test_vertex_cache.py  test_vertex_e2e.py
components/model-training/: pyproject.toml
components/model-training/src/model_training/: config.py  dataset.py  gcs_upload.py  train.py  vertex_train.py
components/model-training/src/model_training/prompts/: extraction_assistant.j2  extraction_system.j2  extraction_user.j2  grounding_assistant.j2  grounding_system.j2  grounding_user.j2
components/model-training/tests/: test_config.py  test_dataset.py  test_train.py  test_vertex_train.py
components/shared/: README.md  mkdocs.yml  pyproject.toml
components/shared/docs/api/: index.md
components/shared/src/shared/: field_schema.py  lazy_cache.py  mlflow_utils.py  models.py
components/shared/tests/: conftest.py  test_mlflow_tracing_smoke.py  test_models.py  test_shared_placeholder.py  test_utils.py
docs/: components-overview.md  gemini-vertex-setup.md  index.md  mlflow-troubleshooting.md
docs/api/: api_spec.md  api_spec.yaml
docs/diagrams/: grounding-flow.md  hitl-flow.md  langgraph-architecture.md
docs/overview/: architecture.md  getting-started.md  hackathon-plan.md  project.md
docs/phases/: week-1.md  week-2.md  week-3.md  week-4.md
docs/reports/: mlflow-vertex-umls-tracing-diagnosis.md
hackathon/docs/: 404.html  index.html  objects.inv  sitemap.xml
hackathon/docs/api/: api_spec.yaml
hackathon/docs/api-service/: Makefile  index.html  pyproject.toml
hackathon/docs/api-service/docs/api/: index.html
hackathon/docs/api-service/src/api_service/: __init__.py  main.py  storage.py
hackathon/docs/api-service/tests/: conftest.py  constants.py  test_api_e2e.py  test_api_endpoints.py  test_placeholder.py  test_protocol_endpoints.py
hackathon/docs/components-overview/: index.html
hackathon/docs/data-pipeline/: Makefile  index.html  mkdocs.yml  pyproject.toml
hackathon/docs/evaluation/: Makefile  index.html  pyproject.toml
hackathon/docs/extraction-service/: index.html  pyproject.toml
hackathon/docs/grounding-service/: Makefile  index.html  pyproject.toml
hackathon/docs/hitl-ui/: index.html
hackathon/docs/search/: search_index.json
hackathon/docs/shared/: Makefile  index.html  mkdocs.yml  pyproject.toml
notebooks/: medgemma_grounding_demo.ipynb  training_pipeline.ipynb
scripts/: check_mlflow_runs.py  cleanup_mlflow_runs.py  create_component.sh  diagnose_extraction.py  diagnose_mlflow.py  download_protocol_sources.py  generate_components_overview.py  inspect_mlflow_traces.py  kill-running-processes.sh  setup_gcp.sh  start-api.sh  start-mlflow-ui.sh  test_gemini_vertex.py  ubkg_gcloud_run.sh  update_root_navigation.py
(+126 files in other folders)
