[project]
name = "gemma-hackathon"
version = "0.1.0"
description = "MedGemma hackathon HITL demo for trial criteria extraction and grounding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "pdflatex>=0.1.3",
    "wkhtmltopdf>=0.2",
    "markdown>=3.4.0",
    "playwright>=1.40.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-monorepo-plugin>=1.0.0",
    "mkdocstrings[python]>=0.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.uv.workspace]
members = [
    "components/api-service",
    "components/extraction-service",
    "components/grounding-service",
    "components/data-pipeline",
    "components/evaluation",
    "components/shared",
]

[tool.mypy]
exclude = "^(site|components/.*/tests)/"

[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["components"]
norecursedirs = ["site", "docs", ".venv", "venv", ".uv_cache", "node_modules", ".git"]
markers = ["e2e: end-to-end API workflow tests"]
pythonpath = [
    "components/api-service/src",
    "components/data-pipeline/src",
    "components/evaluation/src",
    "components/extraction-service/src",
    "components/grounding-service/src",
    "components/shared/src",
]
