[project]
name = "api-service"
version = "0.1.0"
description = "api-service component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "extraction-service",
    "fastapi>=0.110.0",
    "grounding-service",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.18",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=api_service --cov-branch --cov-report=term-missing"
markers = ["e2e: end-to-end API workflow tests"]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.uv.sources]
extraction-service = { workspace = true }
grounding-service = { workspace = true }
