[project]
name = "evaluation"
version = "0.1.0"
description = "evaluation component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "api-service",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = [
    "../api-service/src",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../api-service/src",
]
testpaths = ["tests"]
addopts = "--cov=evaluation --cov-branch --cov-report=term-missing"

[tool.uv]
cache-dir = "./.uv_cache"

[tool.uv.sources]
api-service = { workspace = true }
