[project]
name = "extraction-service"
version = "0.1.0"
description = "extraction-service component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "transformers>=4.45.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "torch>=2.0.0",
    "inference",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extraction_service"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []
mypy_path = ["../shared/src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/src"]
testpaths = ["tests"]
addopts = "--cov=extraction_service --cov-branch --cov-report=term-missing"

[tool.uv]
cache-dir = "./.uv_cache"

[tool.uv.sources]
shared = { workspace = true }
inference = { workspace = true }
