[project]
name = "grounding-service"
version = "0.1.0"
description = "grounding-service component"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.0",
    "tenacity>=8.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "jinja2>=3.1.0",
    "transformers>=4.45.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
lint.select = ["E", "F", "W", "C", "N", "I", "D"]
lint.ignore = ["E203", "D203", "D213", "D100", "D413", "D104"]
lint.pydocstyle.convention = "google"
target-version = "py312"
line-length = 88
exclude = ["venv", ".venv", "docs"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "docs"]
plugins = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=grounding_service --cov-branch --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests",
]

[tool.uv]
cache-dir = "./.uv_cache"
